syntax = "proto3";
package zensayyy.fm.proto;
import "google/protobuf/timestamp.proto";

message Track {
  repeated TrackTimeEvent trackEvents = 1;
  repeated TrackMetadata tracks = 2;
  google.protobuf.Timestamp time = 3;  
  string id = 4;
}

message TrackTimeEvent {
  enum Event {
    FADE_OUT = 0;
    DUCK = 1; 
  }
  Event event = 1;
  int32 time = 2;
  int32 duration = 3;
  int32 refTrackId = 4;
}

message TrackMetadata {
  string trackId = 1;
  string title = 2;
  string artist = 3;
  string thumbnail = 4;
  string source = 5;
  int64 length = 6;
  string extension = 7;
}
